--- a/adarsh_backend/package.json
+++ b/adarsh_backend/package.json
@@ -27,6 +27,7 @@
     "otp-generator": "^2.0.0",
     "paytmchecksum": "^1.5.0",
     "query-string": "^7.0.0",
+    "uniqid": "^5.3.0",
     "uuid": "^2.0.3",
     "whatsapp-chapi": "^1.1.1"
   }
